--- a/HuertoDelValle.csproj
+++ b/HuertoDelValle.csproj
@@ -21,6 +21,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.7" />
+    <PackageReference Include="Rotativa.AspNetCore" Version="1.2.0-beta" />
 
     <PackageReference Include="SendGrid" Version="9.24.2" />
     <PackageReference Include="SendGrid.Extensions.DependencyInjection" Version="1.0.0" />
