--- a/HuertoDelValle.csproj
+++ b/HuertoDelValle.csproj
@@ -20,7 +20,9 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.7" />
+    <PackageReference Include="RestSharp" Version="106.12.0" />
     <PackageReference Include="Rotativa.AspNetCore" Version="1.2.0-beta" />
 
     <PackageReference Include="SendGrid" Version="9.24.2" />
