--- a/HuertoDelValle.csproj
+++ b/HuertoDelValle.csproj
@@ -28,6 +28,7 @@
 
     <PackageReference Include="SendGrid" Version="9.24.2" />
     <PackageReference Include="SendGrid.Extensions.DependencyInjection" Version="1.0.0" />
+    <PackageReference Include="toastr" Version="2.1.1" />
 
   </ItemGroup>
 
